--- a/src/main/webapp/src/app/views/add-pessoa/add-pessoa.component.html
+++ b/src/main/webapp/src/app/views/add-pessoa/add-pessoa.component.html
@@ -1,2 +1,66 @@
-<p>add-pessoa works!</p>
-<span>{{id}}</span>
+<div class="row">
+    <div class="col-md-2">&nbsp;</div>
+
+    <div class="col-md-8">
+        <div class="card" id="listaPessoas">
+            <div class="card-header" style="text-align: center">
+                <h3 class="panel-title">Cadastrar Pessoa</h3>
+            </div>
+            <div class="card-body">
+                <div class="row">
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <form [formGroup]="form" (ngSubmit)="onSubmit()">
+                            <div class="form-row">
+                                <div class="form-group col">
+                                    <label for="nome">Nome</label>
+                                    <input
+                                        type="text"
+                                        formControlName="nome"
+                                        class="form-control"
+                                        [ngClass]="{ 'is-invalid': submitted && f.nome.errors }"/>
+                                    <div *ngIf="submitted && f.nome.errors"
+                                         class="invalid-feedback">
+                                        <div *ngIf="f.nome.errors.required">É necessário inserir um
+                                            nome
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="form-group col">
+                                    <label for="email">Email</label>
+                                    <input
+                                        type="text"
+                                        formControlName="email"
+                                        class="form-control"
+                                        [ngClass]="{ 'is-invalid': submitted && f.email.errors }"/>
+                                    <div *ngIf="submitted && f.email.errors"
+                                         class="invalid-feedback">
+                                        <div *ngIf="f.email.errors">É necessário inserir um email
+                                            válido
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <button [disabled]="loading" class="btn btn-primary">
+                                    <span *ngIf="loading"
+                                          class="spinner-border spinner-border-sm mr-1"></span>
+                                    Cadastrar
+                                </button>
+                                <a routerLink="/" class="btn btn-link">Cancelar</a>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="col-md-2">&nbsp;</div>
+</div>
