--- a/src/main/webapp/src/app/views/list-pessoas/list-pessoas.component.html
+++ b/src/main/webapp/src/app/views/list-pessoas/list-pessoas.component.html
@@ -3,7 +3,7 @@
 
     <div class="col-md-8">
         <div class="card" id="listaPessoas">
-            <div class="card-header">
+            <div class="card-header" style="text-align: center">
                 <h3 class="panel-title">Pessoas cadastradas</h3>
             </div>
             <div class="card-body">
@@ -12,7 +12,7 @@
 
                 <div class="row">
                     <div class="col-md-12">
-                        <table class="table table-bordered">
+                        <table class="table table-bordered table-center">
                             <thead>
                             <tr>
                                 <th scope="col">ID</th>
@@ -38,7 +38,7 @@
                             </tbody>
                         </table>
 
-                        <a href="#" class="btn btn-success">Cadastrar</a>
+                        <a routerLink="cadastrar" class="btn btn-success">Cadastrar</a>
                     </div>
                 </div>
 
