Tela de edição básica de Pessoas

--- a/src/main/webapp/src/app/views/list-pessoas/list-pessoas.component.html
+++ b/src/main/webapp/src/app/views/list-pessoas/list-pessoas.component.html
@@ -28,8 +28,10 @@
                                 <td>{{p.nome}}</td>
                                 <td>{{p.email}}</td>
                                 <td>
-                                    <button (click)="editar(p.id)" class="btn btn-info">Editar
-                                    </button>
+                                    <a [routerLink]="'pessoa/' + p.id">
+                                        <button class="btn btn-info">Editar
+                                        </button>
+                                    </a>
                                 </td>
                                 <td>
                                     <button (click)="excluir(p.id)" class="btn btn-danger">Excluir</button>
