--- a/src/main/webapp/src/app/views/add-pessoa/add-pessoa.component.html
+++ b/src/main/webapp/src/app/views/add-pessoa/add-pessoa.component.html
@@ -15,7 +15,7 @@
                         <form [formGroup]="form" (ngSubmit)="onSubmit()">
                             <div class="form-row">
                                 <div class="form-group col">
-                                    <label for="nome">Nome</label>
+                                    <label for="nome">Nome: </label>
                                     <input
                                         type="text"
                                         formControlName="nome"
@@ -31,7 +31,7 @@
                             </div>
                             <div class="form-row">
                                 <div class="form-group col">
-                                    <label for="email">Email</label>
+                                    <label for="email">Email: </label>
                                     <input
                                         type="text"
                                         formControlName="email"
@@ -45,6 +45,47 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <!--
+                                                        <div class="form-row">
+                                                            <div class="form-group col-10">
+                                                                <label for="logradouro">Logradouro: </label>
+                                                                <input
+                                                                    type="text"
+                                                                    formControlName="logradouro"
+                                                                    class="form-control"
+                                                                />
+                                                            </div>
+
+                                                            <div class="form-group col-2">
+                                                                <label for="numero">Nº: </label>
+                                                                <input
+                                                                    type="text"
+                                                                    formControlName="numero"
+                                                                    class="form-control"
+                                                                />
+                                                            </div>
+                                                        </div>
+                                                        <div class="form-row">
+                                                            <div class="form-group col-6">
+                                                                <label for="complemento">Complemento: </label>
+                                                                <input
+                                                                    type="text"
+                                                                    formControlName="complemento"
+                                                                    class="form-control"
+                                                                />
+                                                            </div>
+
+                                                            <div class="form-group col-6">
+                                                                <label for="bairro">Bairro: </label>
+                                                                <input
+                                                                    type="text"
+                                                                    formControlName="numero"
+                                                                    class="form-control"
+                                                                />
+                                                            </div>
+                                                        </div>
+                            -->
 
                             <div class="form-group">
                                 <button [disabled]="loading" class="btn btn-primary">
