--- a/src/main/webapp/src/app/views/edit-pessoa/edit-pessoa.component.html
+++ b/src/main/webapp/src/app/views/edit-pessoa/edit-pessoa.component.html
@@ -4,7 +4,7 @@
     <div class="col-md-8">
         <div class="card" id="listaPessoas">
             <div class="card-header" style="text-align: center">
-                <h3 class="panel-title">Editar Pessoa</h3>
+                <h3>Editando Pessoa - {{pessoa.nome}}</h3>
             </div>
             <div class="card-body">
                 <div class="row">
@@ -12,7 +12,7 @@
 
                 <div class="row">
                     <div class="col-12">
-                        <form [formGroup]="form" (ngSubmit)="onSubmit()">
+                        <form [formGroup]="form">
                             <div class="form-row">
                                 <div class="form-group col">
                                     <label for="nome">Nome: </label>
@@ -82,11 +82,8 @@
                 </div>
 
                 <div class="form-group">
-                    <button
-                        [disabled]="loading"
-                        class="btn btn-primary">
-                                    <span *ngIf="loading"
-                                          class="spinner-border spinner-border-sm mr-1"></span>
+                    <button (click)="save()" [disabled]="loading" class="btn btn-primary">
+                        <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                         Salvar
                     </button>
                     <a routerLink="/" class="btn btn-link">Cancelar</a>
