--- a/src/main/webapp/src/app/views/list-pessoas/list-pessoas.component.html
+++ b/src/main/webapp/src/app/views/list-pessoas/list-pessoas.component.html
@@ -4,7 +4,7 @@
     <div class="col-md-8">
         <div class="card" id="listaPessoas">
             <div class="card-header" style="text-align: center">
-                <h3 class="panel-title">Pessoas cadastradas</h3>
+                <h3 class="panel-title">Lista de pessoas cadastradas</h3>
             </div>
             <div class="card-body">
                 <div class="row">
